# polyglot

./: .gitignore  README.md  build.sh  pyproject.toml  requirements.txt  run.sh
src/: main.py  utils.py
src/ui/: components.py
