[project]
name = "Polyglot"
version = "0.1.0"
description = "Real time OCR and translations on a section of the screen"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Edoardo Balducci", email = "edoardoba2004@gmail.com" }
]
dependencies = [
    "flet==0.28.3",
    "argostranslate",
    "ocrmac",
    "mss",
    "imageio",
    "opencv-python",
    "numpy"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "it.edblcc"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "polyglot"

# company name to display in about app dialogs
company = "edblcc"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Edoardo Balducci"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}